--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/images/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-<meta
-  name="description"
-  content="Welcome to I Farhat's Personal Portfolio website"
-/>
+    <meta
+      name="description"
+      content="Welcome to I Farhat's Personal Portfolio website"
+    />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/images/icons/apple-touch-icon.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
