--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/icons/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,7 +12,7 @@
 
     <link
       rel="apple-touch-icon"
-      href="%PUBLIC_URL%/images/icons/apple-touch-icon.png"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
