complete hero section

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>I Farhat - Personal Portfolio</title>
   </head>
-  <body>
+  <body class="!scroll-smooth">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
