--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Welcome to I Farhat's Personal Portfolio website"
+      content="Welcome to I Farhat's Personal Portfolio Website"
     />
 
     <link
