--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Welcome to I Farhat's Personal Portfolio Website"
+      content="Welcome to I Farhat's Portfolio"
     />
 
     <link
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>I Farhat - Personal Portfolio</title>
+    <title>I Farhat Portfolio</title>
   </head>
   <body class="!scroll-smooth">
     <noscript>You need to enable JavaScript to run this app.</noscript>
