style: default background color

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>I Farhat Portfolio</title>
   </head>
-  <body class="!scroll-smooth">
+  <body class="!scroll-smooth bg-[#16181d]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
