--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="index" />
     <meta
-      name="description"
-      content="Welcome to I Farhat's Portfolio"
+      name="keywords"
+      content="I. Farhat,I Farhat,I,Farhat,Portfolio Website,Portfolio,Personal Portfolio,Web Developer,Front End Web Developer,Project,Projects,SkipPi,AttendQR,The International School,The International School(TIS),TIS,Farhat e Services & Assistance,HTML,CSS,Tailwind CSS,JavaScript,React,React JS,Web,Web App,React Web App"
     />
+    <meta name="author" content="I. Frahta" />
+    <meta name="description" content="Welcome to I Farhat's Portfolio" />
 
-    <link
-      rel="apple-touch-icon"
-      href="%PUBLIC_URL%/apple-touch-icon.png"
-    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
