chore: add google site verification

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       name="keywords"
       content="I. Farhat,I Farhat,I,Farhat,Portfolio Website,Portfolio,Personal Portfolio,Web Developer,Front End Web Developer,Project,Projects,SkipPi,AttendQR,The International School,The International School(TIS),TIS,Farhat e Services & Assistance,HTML,CSS,Tailwind CSS,JavaScript,React,React JS,Web,Web App,React Web App"
     />
-    <meta name="author" content="I. Frahta" />
+    <meta name="author" content="I. Frahat" />
+    <meta
+      name="google-site-verification"
+      content="4-IaGsl2jupnW829NcuRTrieLocE0cJblxU--ISs9_4"
+    />
     <meta name="description" content="Welcome to I Farhat's Portfolio" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
