--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       name="google-site-verification"
       content="4-IaGsl2jupnW829NcuRTrieLocE0cJblxU--ISs9_4"
     />
+    <meta name="author" content="I Farhat" />
+    <meta name="publisher" content="I Farhat" />
+    <meta name="copyright" content="2024 I Farhat" />
     <meta name="description" content="Welcome to I Farhat's Portfolio" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
