deat: auto redirect traffic to vercel domain

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      location.href !== "https://imfarhat.vercel.app" &&
+        (location.href = "https://imfarhat.vercel.app");
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,7 +23,6 @@
     <meta name="publisher" content="I Farhat" />
     <meta name="copyright" content="2024 I Farhat" />
     <meta name="description" content="Welcome to I Farhat's Portfolio" />
-
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
