--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <script>
-      if (window.location.href !== "https://imfarhat.vercel.app")
-        window.location.href = "https://imfarhat.vercel.app";
+      if (window.location.href !== "https://farhat.vercel.app")
+        window.location.href = "https://farhat.vercel.app";
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
