--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script>
+    <script defer>
       if (window.location.href !== "https://farhat.vercel.app")
         window.location.href = "https://farhat.vercel.app";
     </script>
