chore: update meta description

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta name="author" content="I Farhat" />
     <meta name="publisher" content="I Farhat" />
     <meta name="copyright" content="2024 I Farhat" />
-    <meta name="description" content="Welcome to I Farhat's Portfolio" />
+    <meta name="description" content="Welcome to I Farhat's Portfolio! Look through my creative portfolio demonstrating my competence in HTML, CSS, Tailwind and React. Discover amazing projects and get connected to me to create together!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
