chore: update share btn content

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,13 @@
       name="keywords"
       content="I. Farhat,I Farhat,I,Farhat,Portfolio Website,Portfolio,Personal Portfolio,Web Developer,Front End Web Developer,Project,Projects,SkipPi,AttendQR,The International School,The International School(TIS),TIS,Farhat e Services & Assistance,HTML,CSS,Tailwind CSS,JavaScript,React,React JS,Web,Web App,React Web App"
     />
-    <meta name="author" content="I. Frahat" />
     <meta
       name="google-site-verification"
       content="3Q1F0ReZNeJtOqLfzbnMh3uMhCVZsBLaUg_hvHo1TU4"
     />
-    <meta name="author" content="I Farhat" />
-    <meta name="publisher" content="I Farhat" />
-    <meta name="copyright" content="2024 I Farhat" />
+    <meta name="author" content="I. Farhat" />
+    <meta name="publisher" content="I. Farhat" />
+    <meta name="copyright" content="2024 I. Farhat" />
     <meta name="description" content="Look through I Farhat's creative portfolio demonstrating the competence in HTML, CSS, Tailwind CSS, JavaScript and React JS. Discover amazing projects and their implementations!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
