chore: update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index" />
     <meta
       name="keywords"
-      content="I. Farhat,I. Farhat,Farhat,Portfolio Website,Portfolio,Personal Portfolio,Web Developer,Front End Web Developer,Project,Projects,SkipPi,AttendQR,The International School,The International School(TIS),TIS,Farhat e Services & Assistance,HTML,CSS,Tailwind CSS,JavaScript,React,React JS,Web,Web App,React Web App"
+      content="I. Farhat,I Farhat,Farhat,Portfolio Website,Portfolio,Personal Portfolio,Web Developer,Front End Web Developer,Project,Projects,SkipPi,AttendQR,The International School,The International School(TIS),TIS,Farhat e Services & Assistance,HTML,CSS,Tailwind CSS,JavaScript,React,React JS,Web,Web App,React Web App"
     />
     <meta
       name="google-site-verification"
