--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="I. Farhat" />
     <meta name="publisher" content="I. Farhat" />
     <meta name="copyright" content="2024 I. Farhat" />
-    <meta name="description" content="Look through I. Farhat's creative portfolio demonstrating the competence in HTML, CSS, Tailwind CSS, JavaScript and React JS. Discover amazing projects and their implementations!" />
+    <meta name="description" content="Look through I. Farhat's creative portfolio demonstrating the competence in HTML, CSS, Tailwind CSS, JavaScript and React JS. Discover amazing projects, ideas and their implementations!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
