update meta tags for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="robots" content="index" />
-    <meta
-      name="keywords"
-      content="Farhat Portfolio,I. Farhat,I Farhat,Farhat,Portfolio Website,Portfolio,Personal Portfolio,Web Developer,Front End Web Developer,Project,Projects,SkipPi,AttendQR,The International School,The International School(TIS),TIS,Farhat e Services & Assistance,HTML,CSS,Tailwind CSS,JavaScript,React,React JS,Web,Web App,React Web App"
-    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Farhat Portfolio" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="author" content="I. Farhat" />
     <meta name="publisher" content="I. Farhat" />
     <meta name="copyright" content="2024 I. Farhat" />
     <meta
+      name="keywords"
+      content="Farhat Portfolio, I. Farhat, Web Developer, Front End Web Developer, Projects, SkipPi, AttendQR, The International School, TIS, Farhat e Services, Farhat e Services & Assistance"
+    />
+    <meta
       name="description"
-      content="Look through I. Farhat's creative portfolio demonstrating the competence in HTML, CSS, Tailwind CSS, JavaScript and React JS. Discover amazing projects, ideas and their implementations!"
+      content="Welcome to I. Farhat's Portfolio. Explore my projects including SkipPi, AttendQR, and The International School (TIS). As a skilled Front End Web Developer, I specialize in creating responsive and visually appealing websites. Contact me to discuss how I can help with your web development needs."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
