add googler analytics

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Farhat Portfolio</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PFRH03MNVL"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-PFRH03MNVL");
+    </script>
   </head>
   <body class="!scroll-smooth bg-[#16181d]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
